fix: alignment issue for services field (#12961)

--- a/src/modules/75-cd/components/PipelineSteps/DeployServiceEntityStep/DeployServiceEntityStep.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/DeployServiceEntityStep/DeployServiceEntityStep.module.scss
@@ -51,7 +51,8 @@
 }
 
 .inputSetSpinner {
-  margin-bottom: var(--spacing-6);
+  display: flex;
+  align-self: center;
 }
 .inputFieldLayout {
   display: flex;
